# generaite_todo_app_3

./: .aider.chat.history.md  .aider.input.history  .gitignore  Cargo.toml
config/: dev.toml  prod.toml  test.toml
domain/: Cargo.toml
domain/src/: db.rs  lib.rs  main.rs  repository.rs
domain/src/user/: model.rs  repository.rs
entity/: Cargo.toml
entity/src/: user.rs
migration/src/: m20220101_000001_create_user_table.rs
src/: config.rs  main.rs
web/: Cargo.toml
web/src/: app_state.rs  flash.rs  lib.rs  main.rs  router.rs  server.rs
