[package]
name = "generaite_todo_app"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.87"
dotenvy = "0.15.7"
sea-orm = { version = "1.0.1", features = ["runtime-tokio-native-tls", "sqlx-postgres"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tera = "1.20.0"

[workspace]
members = ["entity", "web", "domain"]