[package]
name = "generaite_todo_app"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.87"
config = { version = "0.14.0", features = ["toml"] }
dotenvy = "0.15.7"
sea-orm = { version = "1.0.1", features = ["runtime-tokio-native-tls", "sqlx-postgres"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tera = "1.20.0"
toml = "0.8.19"
domain = { path = "domain" }
tokio = { version = "1.40.0", features = ["full"] }

[workspace]
members = ["entity", "web", "domain"]
