[package]
name = "domain"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.87"
sea-orm = "1.0.1"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.28.0", features = ["full"] }
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.10.0", features = ["v4"] }
entity = { path = "../entity" }
migration = { path = "../migration" }
async-trait = "0.1"
thiserror = "1.0"
