[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.87"
axum = "0.7.5"
dotenvy = "0.15.7"
domain = { path = "../domain" }
sea-orm = { version = "1.0.1", features = ["runtime-tokio-native-tls", "sqlx-postgres"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tera = "1.20.0"
tokio = { version = "1.40.0", features = ["full"] }
tower-cookies = "0.10.0"
tower-http = { version = "0.5.2", features = ["fs"] }
